8315020: The macro definition for LoongArch64 zero build is not accurate.